; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/fb/extr_machfb.c_machfb_setfg.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/fb/extr_machfb.c_machfb_setfg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.machfb_softc = type { i32 }

@DP_FRGD_CLR = common dso_local global i32 0, align 4
@MACHFB_CMAP_OFF = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.machfb_softc*, i32)* @machfb_setfg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @machfb_setfg(%struct.machfb_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.machfb_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.machfb_softc* %0, %struct.machfb_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.machfb_softc*, %struct.machfb_softc** %3, align 8
  %7 = getelementptr inbounds %struct.machfb_softc, %struct.machfb_softc* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp eq i32 %5, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  br label %24

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.machfb_softc*, %struct.machfb_softc** %3, align 8
  %14 = getelementptr inbounds %struct.machfb_softc, %struct.machfb_softc* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  %15 = load %struct.machfb_softc*, %struct.machfb_softc** %3, align 8
  %16 = call i32 @wait_for_fifo(%struct.machfb_softc* %15, i32 1)
  %17 = load %struct.machfb_softc*, %struct.machfb_softc** %3, align 8
  %18 = load i32, i32* @DP_FRGD_CLR, align 4
  %19 = load i32, i32* %4, align 4
  %20 = sext i32 %19 to i64
  %21 = load i64, i64* @MACHFB_CMAP_OFF, align 8
  %22 = add nsw i64 %20, %21
  %23 = call i32 @regw(%struct.machfb_softc* %17, i32 %18, i64 %22)
  br label %24

24:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @wait_for_fifo(%struct.machfb_softc*, i32) #1

declare dso_local i32 @regw(%struct.machfb_softc*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
